	in HasTextMatchingSubstringOf
	* src/gramps_main.py: Add new regular expression filter
	* src/plugins/FilterEditor.py (EditRule:__init__): Treat params of new filter as boolean.
	* TODO: Add parameter definition of Filter Rules to the filter itself, so
	it can be removed from the filter editor and used by PeopleView.

2005-03-16  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/ScratchPad.py (ScratchPad): improved the generation of 
	tooltip information for most object types.
	
2005-03-16  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/EditPerson.py (EditPerson.ev_drag_data_received): Fixed
	drag and drop of events.

2005-03-15  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib.py (Source.get_text_data_child_list,
	Family.get_text_data_child_list): Add missing lists.
	* src/GenericFilter.py (FullTextSearch): Correct description.

	* src/GenericFilter.py (HasTextMatchingSubstringOf):
	Rename FullTextSearch as well as its descriptions.
	* src/gramps_main.py: Change string for filter menu.
	* src/plugins/FilterEditor.py (EditRule.__init__): Hide window while
	drawing.
	* src/DateEdit.py (DateEditorDialog.__init__): Hide window while
	drawing.

	* src/data/gramps.xml: Correct GW magic to not collide with XML.

2005-03-15  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/Makefile.am : Added TreeTip.py to list of installed modules.
	* src/TreeTip.py: New module that implements tooltips on TreeView rows.
	* src/plugins/Makefile.am: Added ScratchPad.py and scratchpad.glade.
	* src/plugins/ScratchPad.py: New module to implement a scratch pad for
	temporary storage of drag and drop objects.
	* src/plugins/scratchpad.glade: New glade file for ScratchPad window.
	
2005-03-15  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/GenericFilter.py (FullTextSearch): Added new filter that provides
	a full-text search thru (nearly) all attributes and linked objects of a person.
	* src/gramps_main.py: add the new filter to the menu.